--- a/src/unirent-frontent/src/App/App.css
+++ b/src/unirent-frontent/src/App/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+.entrar {
+
+    border-color: gold;
+    border-radius: 10px;
+    background-color: white;
+    color: gold;
+    height: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+
+
+}
+.list {
+    display: grid;
+    grid-template-columns: 5fr;
+    list-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ulist {
+    display: block;
+    list-style-type: decimal;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
 }
