--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -10,12 +10,7 @@ h1 {
     cursor: pointer;
 }
 
-.tres-coisas-in {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
+
 
 .modal-content {
     display: flex;
@@ -52,8 +47,23 @@ h1 {
     float: right;
     cursor: pointer;
   }
-
+    .tres-coisas-in {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        
+    }
   .ola-mundo {
-    padding: 1rem;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 5rem;
+  }
+  .lado-a-lado {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
