--- a/src/frontend/src/routes/Home.css
+++ b/src/frontend/src/routes/Home.css
@@ -4,61 +4,58 @@
 }
 
 .tres-coisas-in {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  
-  }
-  
-  .ola-mundo {
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    flex-direction: column;
-    margin-left: 5rem;
-    margin-right: 5rem;
-  }
-  
-  .lado-a-lado {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .pesquisa-input-submit {
-    border-radius: 4px;
-    border-color: blue;
-    color: aliceblue;
-    background-color: blue;
-    cursor: pointer;
-  }
-  .home-organizada {
-    background-color: rgb(245, 245, 245);
-    display: flex;
-    flex-direction: column;
-  }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
 
-  .ver-anuncios {
-    background-color: rgb(245, 245, 245);
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 160px;
-    padding-right: 240px;
-    margin: 0;
-  }
+.ola-mundo {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
 
-  .cards {
+.lado-a-lado {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.pesquisa-input-submit {
+  border-radius: 4px;
+  border-color: blue;
+  color: aliceblue;
+  background-color: blue;
+  cursor: pointer;
+}
+.home-organizada {
+  background-color: rgb(245, 245, 245);
+  display: flex;
+  flex-direction: column;
+}
 
-    background-color: rgb(245, 245, 245);
+.ver-anuncios {
+  background-color: rgb(245, 245, 245);
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 160px;
+  padding-right: 240px;
+  margin: 0;
+}
 
-    display: grid;
-    
-    grid-template-columns: repeat(4, 1fr);
-    
-    grid-auto-rows: auto;
-    
-    grid-gap: 0;
-    row-gap: 10px;
-    }
+.cards {
+  background-color: rgb(245, 245, 245);
+
+  display: grid;
+
+  grid-template-columns: repeat(4, 1fr);
+
+  grid-auto-rows: auto;
+  grid-gap: 10px;
+  row-gap: 10px;
+}
